--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -1,71 +1,55 @@
-name: Build and Deploy Pages
+name: Github Page Deployment
 
 on:
-   push:
-      tags:
-         - 'v**'
-
-   # Allow running manually from the actions tab
-   workflow_dispatch:
-
-
-# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
-permissions:
-   contents: read
-   pages: write
-   id-token: write
-
-concurrency:
-   group: "pages"
-   cancel-in-progress: true
+  push:
+    branches: [ master ]
+  workflow_dispatch:
 
 jobs:
-   # Single deploy job since we're just deploying
-   deploy:
-      environment:
-         name: github-pages
-         url: ${{ steps.deployment.outputs.page_url }}
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@master
 
-      runs-on: ubuntu-latest
+      - name: Caching NPM
+        uses: actions/cache@master
+        with:
+          path: |
+            ~/.npm
+            /usr/local/lib/node_modules
+          key: ${{ runner.os }}-npm-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            key: ${{ runner.os }}-npm-
 
-      steps:
-         -  name: Checkout
-            uses: actions/checkout@master
+      - name: Install tools
+        if: steps.cache.outputs.cache-hit != 'true'
+        run: npm i -g @tuckn/insert-gtag tslib
 
-         # Remove entries from the `.gitignore` so the gh-pages action can correctly add+commit them to the pages branch
-         -  name: Build Service Worker
-            run: |
-               node --version
-               npm --version
-               npm i
-               npm run build:sw:prod
-               sed -i 's/sw.js//g' .gitignore
-               sed -i 's/sw-injector.js//g' .gitignore
+      - name: Install deps
+        run: npm ci
 
-         -  name: Build SEO Pages
-            env:
-               VET_SEO_IS_DEV_MODE: true
-               VET_BASE_SITE_URL: https://5etools-mirror-1.github.io/
-               VET_SEO_IS_SKIP_UA_ETC: true
-            run: |
-               npm run build:seo -- ${{ github.ref_name }}
+      - name: Build
+        run: npm run build
 
-         -  name: Cleanup
-            run: |
-               rm -rf node_modules node .gitmodules *.md *.zip scss spellcheck homebrew prerelease
-               ls -lah
+      - name: Insert gtag
+        run: insert-gtag analytics ./ ${{ secrets.GTAG_UA }}
 
-         -  name: Setup Pages
-            uses: actions/configure-pages@master
+      - name: Prepare production
+        run: |
+          bash ./build/deploy-prep-prod.sh
+          bash ./build/deploy-delete-files.sh
 
-         -  name: Upload artifact
-            uses: actions/upload-pages-artifact@master
-            with:
-               path: '.'
+      -  name: Setup Pages
+         uses: actions/configure-pages@master
 
-         -  name: Deploy to GitHub Pages
-            id: deployment
-            uses: actions/deploy-pages@master
-            with:
-               # Timeout in millis (1 hour)
-               timeout: 3600000
+      -  name: Upload artifact
+         uses: actions/upload-pages-artifact@master
+         with:
+            path: '.'
+
+      -  name: Deploy to GitHub Pages
+         id: deployment
+         uses: actions/deploy-pages@master
+         with:
+            # Timeout in millis (1 hour)
+            timeout: 3600000
