--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -5,9 +5,24 @@ on:
     branches: [ master ]
   workflow_dispatch:
 
+# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
+permissions:
+   contents: read
+   pages: write
+   id-token: write
+
+concurrency:
+   group: "pages"
+   cancel-in-progress: true
+
 jobs:
-  build:
+  deploy:
+    environment:
+       name: github-pages
+       url: ${{ steps.deployment.outputs.page_url }}
+
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@master
       - uses: actions/setup-node@v3
